// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard component horizontal variant should render a product card with with all the product information 1`] = `
.c16 {
  background-image: linear-gradient( to top, var(--color-green-2), var(--color-green-5) );
  border-radius: 6px;
  box-shadow: var(--box-shadow-md);
  color: white;
  cursor: pointer;
  font-size: var(--font-size-14);
  font-weight: var(--font-weight-bold);
  margin-top: 8px;
  padding: 13px;
  text-transform: uppercase;
  width: 100%;
}

.c16:disabled {
  background: var(--color-grey-10);
  cursor: initial;
  box-shadow: none;
  pointer-events: none;
}

.c16:not(:disabled):hover {
  background-image: linear-gradient( to top, var(--color-green-1), var(--color-green-3) );
  box-shadow: var(--box-shadow-hover);
}

.c16:not(:disabled):active {
  -webkit-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.c6 {
  color: var(--color-blue-4);
  font-size: var(--font-size-13);
  font-weight: var(--font-weight-bold);
  text-transform: uppercase;
}

.c10 {
  color: var(--color-grey-7);
  font-size: var(--font-size-16);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c10 span {
  font-size: 0.9em;
  font-weight: var(--font-weight-semibold);
}

.c9 {
  color: var(--color-blue-4);
  font-size: var(--font-size-32);
  font-weight: var(--font-weight-regular);
}

.c9 span {
  font-size: 0.7em;
}

.c12 {
  margin-top: 10px;
  position: relative;
  width: 55px;
}

.c13 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--color-grey-14);
  border: 1px solid var(--color-grey-10);
  border-radius: 6px;
  box-shadow: 0 2px 3px rgb(17 17 17 / 10%);
  font-size: var(--font-size-14);
  font-weight: var(--font-weight-medium);
  padding: 6px 25px 6px 10px;
  width: 100%;
}

.c13:not(:disabled) {
  cursor: pointer;
}

.c13:not(:disabled):hover {
  background-color: var(--color-grey-12);
}

.c14 {
  --arrow-color: var(--color-grey-4);
  --arrow-size: 5px;
  height: 100%;
  pointer-events: none;
  position: absolute;
  right: 0;
  width: 25px;
}

.c14::before,
.c14::after {
  border-left: var(--arrow-size) solid transparent;
  border-right: var(--arrow-size) solid transparent;
  content: '';
  left: 50%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c14::before {
  border-bottom: var(--arrow-size) solid var(--arrow-color);
  top: 9px;
}

.c14::after {
  border-top: var(--arrow-size) solid var(--arrow-color);
  bottom: 9px;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: var(--color-green-5);
  -webkit-column-gap: 5px;
  column-gap: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: var(--font-size-11);
  font-weight: var(--font-weight-bold);
  text-transform: uppercase;
}

.c0 {
  border: 1px solid var(--color-grey-9);
  display: grid;
  grid-template-columns: auto 1fr;
  margin-bottom: 15px;
  padding: 20px 25px;
}

.c5 {
  color: var(--color-grey-4);
  font-size: var(--font-size-14);
  margin: 5px 0;
}

.c1 {
  height: auto;
  width: 120px;
}

.c1 img {
  height: auto;
  max-width: 100%;
}

.c2 {
  padding: 10px 0 10px 25px;
}

.c3 {
  height: auto;
  width: 75px;
}

.c3 img {
  height: auto;
  max-width: 100%;
}

.c7 {
  border-top: 2px solid var(--color-grey-9);
  grid-column: 1/3;
  padding-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 10px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.c15 {
  width: 160px;
}

.c17 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 10px;
}

.c4 {
  background-color: var(--color-red-6);
  border-radius: 5px;
  color: white;
  display: inline-block;
  font-size: var(--font-size-14);
  font-weight: var(--font-weight-semibold);
  margin-top: 5px;
  padding: 2px 10px;
  text-transform: uppercase;
}

@media screen and (min-width:800px) {
  .c0 {
    grid-template-columns: auto 1fr 280px;
  }
}

@media screen and (min-width:530px) {
  .c1 {
    width: 150px;
    height: auto;
  }
}

@media screen and (min-width:930px) {
  .c1 {
    width: 180px;
    height: auto;
  }
}

@media screen and (min-width:800px) {
  .c2 {
    padding: 10px 25px;
  }
}

@media screen and (min-width:930px) {
  .c3 {
    width: 90px;
    height: auto;
  }
}

@media screen and (min-width:650px) {
  .c7 {
    margin-left: 25px;
    grid-column: 2/3;
  }
}

@media screen and (min-width:800px) {
  .c7 {
    padding-left: 25px;
    padding-top: 0;
    margin: 0;
    border-left: 1px solid var(--color-grey-9);
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
    grid-column: initial;
    border-top: none;
  }
}

@media screen and (min-width:800px) {
  .c11 {
    position: absolute;
    right: 0;
    top: 0;
  }
}

@media screen and (min-width:650px) {
  .c15 {
    width: 200px;
  }
}

@media screen and (min-width:800px) {
  .c15 {
    width: 100%;
  }
}

@media screen and (min-width:800px) {
  .c17 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<li
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt=""
      height={200}
      priority="true"
      quality={90}
      src=""
      width={200}
    />
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <img
        alt=""
        height={24}
        quality={90}
        src=""
        width={110}
      />
    </div>
    <div
      className="c4"
    >
      SALE
    </div>
    <p
      className="c5"
    >
      ASUS ROG Strix GeForce RTX 3080 V2 OC
      , 
      1440MHz, 1905MHz Boost, 8704 CUDA Cores, 10GB GDDR6X
    </p>
    <span
      className="c6"
    >
      SKU: 
      GPU-3PAQ-ASU
    </span>
  </div>
  <div
    className="c7"
  >
    <div
      className="c8"
    >
      <span
        className="c9"
      >
        <span>
          £
        </span>
        99
        <span>
          .99
        </span>
      </span>
      <span
        className="c10"
      >
        <span>
          Was: 
        </span>
        £129.99
      </span>
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          <label
            hidden={true}
            htmlFor=":r0:"
          >
            Quantity
          </label>
          <select
            className="c13"
            disabled={false}
            id=":r0:"
            name="quantity"
            onChange={[Function]}
            value={1}
          >
            <option
              value={1}
            >
              1
            </option>
            <option
              value={2}
            >
              2
            </option>
            <option
              value={3}
            >
              3
            </option>
            <option
              value={4}
            >
              4
            </option>
            <option
              value={5}
            >
              5
            </option>
          </select>
          <span
            className="c14"
          />
        </div>
      </div>
    </div>
    <div
      className="c15"
    >
      <button
        className="c16"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Add To Basket
      </button>
      <div
        className="c17"
      >
        <div
          className="c18"
          title="Item is in stock"
        >
          <svg
            enableBackground="new 0 0 24 24"
            fill="var(--color-grey-4)"
            height={18}
            viewBox="0 0 24 24"
            width={18}
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <rect
                fill="none"
                height="24"
                width="24"
              />
            </g>
            <g>
              <g>
                <path
                  d="M5,5h2v3h10V5h2v5h2V5c0-1.1-0.9-2-2-2h-4.18C14.4,1.84,13.3,1,12,1S9.6,1.84,9.18,3H5C3.9,3,3,3.9,3,5v14 c0,1.1,0.9,2,2,2h6v-2H5V5z M12,3c0.55,0,1,0.45,1,1s-0.45,1-1,1s-1-0.45-1-1S11.45,3,12,3z"
                />
                <polygon
                  points="21,11.5 15.51,17 12.5,14 11,15.5 15.51,20 22.5,13"
                />
              </g>
            </g>
          </svg>
          In Stock
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`ProductCard component vertical variant should render a product card with with all the product information 1`] = `
.c11 {
  background-image: linear-gradient( to top, var(--color-green-2), var(--color-green-5) );
  border-radius: 6px;
  box-shadow: var(--box-shadow-md);
  color: white;
  cursor: pointer;
  font-size: var(--font-size-12);
  font-weight: var(--font-weight-bold);
  margin-top: 8px;
  padding: 13px;
  text-transform: uppercase;
  width: 180px;
}

.c11:disabled {
  background: var(--color-grey-10);
  cursor: initial;
  box-shadow: none;
  pointer-events: none;
}

.c11:not(:disabled):hover {
  background-image: linear-gradient( to top, var(--color-green-1), var(--color-green-3) );
  box-shadow: var(--box-shadow-hover);
}

.c11:not(:disabled):active {
  -webkit-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.c4 {
  color: var(--color-blue-4);
  font-size: var(--font-size-12);
  font-weight: var(--font-weight-bold);
  text-transform: uppercase;
}

.c6 {
  color: var(--color-grey-7);
  font-size: var(--font-size-16);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c6 span {
  font-size: 0.9em;
  font-weight: var(--font-weight-semibold);
}

.c5 {
  color: var(--color-blue-4);
  font-size: var(--font-size-30);
  font-weight: var(--font-weight-regular);
}

.c5 span {
  font-size: 0.7em;
}

.c7 {
  margin-top: 10px;
  position: relative;
  width: 55px;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--color-grey-14);
  border: 1px solid var(--color-grey-10);
  border-radius: 6px;
  box-shadow: 0 2px 3px rgb(17 17 17 / 10%);
  font-size: var(--font-size-14);
  font-weight: var(--font-weight-medium);
  padding: 6px 25px 6px 10px;
  width: 100%;
}

.c8:not(:disabled) {
  cursor: pointer;
}

.c8:not(:disabled):hover {
  background-color: var(--color-grey-12);
}

.c9 {
  --arrow-color: var(--color-grey-4);
  --arrow-size: 5px;
  height: 100%;
  pointer-events: none;
  position: absolute;
  right: 0;
  width: 25px;
}

.c9::before,
.c9::after {
  border-left: var(--arrow-size) solid transparent;
  border-right: var(--arrow-size) solid transparent;
  content: '';
  left: 50%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c9::before {
  border-bottom: var(--arrow-size) solid var(--arrow-color);
  top: 9px;
}

.c9::after {
  border-top: var(--arrow-size) solid var(--arrow-color);
  bottom: 9px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: var(--color-green-5);
  -webkit-column-gap: 5px;
  column-gap: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: var(--font-size-11);
  font-weight: var(--font-weight-bold);
  margin-top: 8px;
  text-transform: uppercase;
}

.c0 {
  background-color: white;
  border: 1px solid var(--color-grey-12);
  border-radius: 10px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 img {
  height: auto;
  width: 150px;
}

.c0:nth-child(4n) {
  display: none;
}

.c1 {
  -webkit-line-clamp: 2;
  margin: 5px 0 10px;
  -webkit-box-orient: vertical;
  display: -webkit-box;
  overflow: hidden;
  text-align: center;
}

.c2 {
  color: var(--color-grey-4);
  font-size: var(--font-size-14);
  -webkit-line-clamp: 3;
  line-height: 1.5;
  margin-top: 10px;
  -webkit-box-orient: vertical;
  display: -webkit-box;
  overflow: hidden;
  text-align: center;
}

.c3 {
  border-bottom: 2px solid var(--color-grey-11);
  margin: 5px 0;
  padding-bottom: 10px;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media screen and (min-width:800px) {

}

@media screen and (min-width:1110px) {
  .c0:nth-child(4n) {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media screen and (min-width:570px) {
  .c0 {
    min-height: 510px;
  }
}

@media screen and (min-width:570px) {
  .c1 {
    margin: 5px 0 auto;
  }
}

<li
  className="c0"
>
  <img
    alt=""
    height={200}
    quality={90}
    src=""
    width={200}
  />
  <p
    className="c1"
  >
    ASUS ROG Strix GeForce RTX 3080 V2 OC
  </p>
  <p
    className="c2"
  >
    1440MHz, 1905MHz Boost, 8704 CUDA Cores, 10GB GDDR6X
  </p>
  <div
    className="c3"
  >
    <span
      className="c4"
    >
      SKU: 
      GPU-3PAQ-ASU
    </span>
  </div>
  <span
    className="c5"
  >
    <span>
      £
    </span>
    99
    <span>
      .99
    </span>
  </span>
  <span
    className="c6"
  >
    <span>
      Was: 
    </span>
    £129.99
  </span>
  <div
    className="c7"
  >
    <label
      hidden={true}
      htmlFor=":r1:"
    >
      Quantity
    </label>
    <select
      className="c8"
      disabled={false}
      id=":r1:"
      name="quantity"
      onChange={[Function]}
      value={1}
    >
      <option
        value={1}
      >
        1
      </option>
      <option
        value={2}
      >
        2
      </option>
      <option
        value={3}
      >
        3
      </option>
      <option
        value={4}
      >
        4
      </option>
      <option
        value={5}
      >
        5
      </option>
    </select>
    <span
      className="c9"
    />
  </div>
  <div
    className="c10"
    title="Item is in stock"
  >
    <svg
      enableBackground="new 0 0 24 24"
      fill="var(--color-grey-4)"
      height={18}
      viewBox="0 0 24 24"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <rect
          fill="none"
          height="24"
          width="24"
        />
      </g>
      <g>
        <g>
          <path
            d="M5,5h2v3h10V5h2v5h2V5c0-1.1-0.9-2-2-2h-4.18C14.4,1.84,13.3,1,12,1S9.6,1.84,9.18,3H5C3.9,3,3,3.9,3,5v14 c0,1.1,0.9,2,2,2h6v-2H5V5z M12,3c0.55,0,1,0.45,1,1s-0.45,1-1,1s-1-0.45-1-1S11.45,3,12,3z"
          />
          <polygon
            points="21,11.5 15.51,17 12.5,14 11,15.5 15.51,20 22.5,13"
          />
        </g>
      </g>
    </svg>
    In Stock
  </div>
  <button
    className="c11"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Add To Basket
  </button>
</li>
`;
